# yt-dlp_cli_gui_tool

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: __main__.py
src/core/: downloader.py
src/core/support/: cleanup.py  errors.py  playlist.py  pot_provider.py
src/gui/: main_window.py  modern_ui.py  task_item.py  task_manager.py  terminal_ui.py  theme_manager.py  ui_manager.py  widget_factory.py  window_ui.py
src/utils/: config.py  log_cleaner.py
