[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-dlp-gui-tool"
version = "1.0.0"
description = "A YouTube downloader with GUI and CLI interfaces using yt-dlp"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "asgiref==3.8.1",
    "Django==5.0.4",
    "sqlparse==0.5.0",
    "tzdata==2024.1",
    "yt-dlp>=2023.12.30",
    "prompt-toolkit>=3.0.0",
    "customtkinter>=5.2.0",
    "darkdetect>=0.7.1",
]

[project.scripts]
yt-dlp-gui = "src.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/yt-dlp_cli_gui_tool"
Repository = "https://github.com/yourusername/yt-dlp_cli_gui_tool"
Issues = "https://github.com/yourusername/yt-dlp_cli_gui_tool/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"] 