[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-dlp-gui-tool"
version = "1.0.0"
description = "A YouTube downloader with GUI and CLI interfaces using yt-dlp"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2024.12.0",
    "customtkinter>=5.2.0",
    "darkdetect>=0.7.1",
    "prompt-toolkit>=3.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "curl-cffi>=0.6.0",
    "urllib3>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
yt-dlp-gui = "src.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/yt-dlp_cli_gui_tool"
Repository = "https://github.com/yourusername/yt-dlp_cli_gui_tool"
Issues = "https://github.com/yourusername/yt-dlp_cli_gui_tool/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"] 